# ECS-F

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  astyle.bat  astyle.sh
common/crc/: CMakeLists.txt  crc.c  crc.h
demo/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  Component.cpp  Engine.cpp  Entity.cpp  System.cpp
include/: ECSFComponent.h  ECSFEngine.h  ECSFEntity.h  ECSFPlatform.h  ECSFSystem.h
