cmake_minimum_required(VERSION 2.8)
if(COMMAND cmake_policy)
cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
PROJECT(ECS-F)

OPTION(BUILD_DEMO "Build an executable demo (requires and downloads the Irrlicht engine)")
OPTION(BUILD_IRRLICHT "Build the Irrlicht engine from source rather than use the official binaries")

IF(CMAKE_COMPILER_IS_GNUCXX)
# -std=c++0x is required to be able to include stdint.h as cstdint, weird, I know.
# But then CUDA doesn't like c++0x, so stick to .h files until it does *sigh*
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
IF(RELEASE_BUILD)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG -fomit-frame-pointer -O3")
ELSE(RELEASE_BUILD)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG -g -O0")
ENDIF(RELEASE_BUILD)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

IF(CMAKE_COMPILER_IS_GNUC)
SET(CMAKE_C_FLAGS_RELEASE "-DNDEBUG -fomit-frame-pointer -O3")
SET(CMAKE_C_FLAGS_DEBUG "-DDEBUG -g -O0")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
ENDIF(CMAKE_COMPILER_IS_GNUC)

if(BUILD_DEMO)
if(NOT EXISTS "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1.zip")
message(STATUS "Downloading Irrlicht...")
set(ENV{http_proxy} "${HTTP_PROXY}")
file(DOWNLOAD "http://downloads.sourceforge.net/irrlicht/irrlicht-1.8.1.zip" "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1.zip" STATUS irrlicht_dl_status LOG irrlicht_dl_log SHOW_PROGRESS)
if(NOT irrlicht_dl_status MATCHES "0;\"no error\"")
message("Download failed, are you behind a proxy? ${irrlicht_dl_status}")
endif(NOT irrlicht_dl_status MATCHES "0;\"no error\"")
message(STATUS "Done downloading Irrlicht")
endif(NOT EXISTS "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1.zip")

if(NOT IS_DIRECTORY "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1")
message(STATUS "Extracting Irrlicht")
execute_process(COMMAND cmake -E tar xzvf irrlicht-1.8.1.zip WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endif(NOT IS_DIRECTORY "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/include)
if(MSVC)
if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
	set(LINK_DIRECTORIES "${LINK_DIRECTORIES} ${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/lib/Win64-visualStudio")
	set(IRRLICHT_LIBS "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/lib/Win64-visualStudio/Irrlicht.lib")
  else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
    set(IRRLICHT_LIBS "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/lib/Win32-visualStudio/Irrlicht.lib")
  endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
endif(MSVC)

if(BUILD_IRRLICHT)
# Building the Irrlicht Engine requires having the DXSDK installed, so this path should be avoided, 
# UNLESS building Irrlicht from scratch is part of your project.
if(MSVC)
message(STATUS "Including Irrlicht projects")
if(MSVC12)
message(STATUS "Updating Irrlicht Solution")
execute_process(COMMAND devenv.exe /Upgrade Irrlicht11.0.vcxproj WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/source/Irrlicht")
include_external_msproject(Irrlicht "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/source/Irrlicht/Irrlicht11.0.vcxproj")
endif(MSVC12)
if(MSVC11)
include_external_msproject(Irrlicht "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/source/Irrlicht/Irrlicht11.0.vcxproj")
endif(MSVC11)
if(MSVC10)
include_external_msproject(Irrlicht "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/source/Irrlicht/Irrlicht10.0.vcxproj")
endif(MSVC10)
if(MSVC9)
include_external_msproject(Irrlicht "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/source/Irrlicht/Irrlicht9.0.vcxproj")
endif(MSVC9)
if(MSVC8)
include_external_msproject(Irrlicht "${CMAKE_SOURCE_DIR}/irrlicht-1.8.1/source/Irrlicht/Irrlicht8.0.vcxproj")
endif(MSVC8)
endif(MSVC)
endif(BUILD_IRRLICHT)
SUBDIRS(demo)
endif(BUILD_DEMO)

INCLUDE_DIRECTORIES(include common/crc)
SUBDIRS(common/crc engine)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/bin)
